--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,17 @@
-html,body{
-  background-color: #ECE1E6;
-}
 
 #content{
   position: absolute;
+  overflow: hidden;
 
   top: 0px;
-  bottom: 0px;
   left: 0px;
-  right: 0px;
 
-  margin: 1.5%;
+  width: 100%;
+  height: 100%;
+
+  padding: 1em;
+
+  border: 1em solid #ECE1E6;
 
   font-family: 'Roboto', sans-serif;
   color: #ECE1E6;
@@ -20,8 +21,18 @@ html,body{
 
 nav{
   width: 100%;
-  padding: 1.5%;
+
+  margin: 0;
+  padding: 0;
+
   font-size: 1.3em;
+}
+
+nav h1{
+  margin: 0;
+
+  font-size: 1.3em;
+  font-weight: 900;
 }
 
 nav a,
@@ -33,11 +44,7 @@ nav a:active{
   text-decoration: none;
 }
 
-nav strong{
-  font-weight: 900;
-}
-
-nav ul{
+/* nav ul{
   display: inline-block;
   float: right;
 
@@ -50,19 +57,17 @@ nav ul{
 nav ul li{
   display: inline;
   margin-left: 1em;
-}
+} */
 
 
 #title{
   position: absolute;
+  top: 30%;
+  left: 10%;
 
-  top: 40%;
-  left: 20%;
-
-  width: 70%;
 }
 
-#title h1{
+#title h2{
   margin: 0;
 
   text-transform: uppercase;
@@ -70,9 +75,20 @@ nav ul li{
   font-weight: 900;
 }
 
-#title h2{
+#title h3{
   margin: 0;
 
   font-size: 3em;
   font-weight: 300;
+}
+
+@media screen and (max-width: 550px) {
+  #title h2{
+    font-size: 3.5em;
+  }
+
+  #title h3{
+    font-size: 2em;
+  }
+
 }
