--- a/styles/style.css
+++ b/styles/style.css
@@ -19,20 +19,27 @@
   background-color: #498f73;
 }
 
-nav{
-  width: 100%;
+#navagation .navbar-toggler{
+  border: none !important;
+  color: #ECE1E6;
+}
 
-  margin: 0;
+#navagation{
   padding: 0;
+}
 
+nav{
   font-size: 1.3em;
 }
 
 nav h1{
+  display: inline;
+
   margin: 0;
 
   font-size: 1.3em;
   font-weight: 900;
+  color: #ECE1E6;
 }
 
 nav a,
@@ -40,30 +47,27 @@ nav a:hover,
 nav a:visited,
 nav a:link,
 nav a:active{
-  color: inherit;
+  cursor: pointer;
   text-decoration: none;
 }
 
-/* nav ul{
-  display: inline-block;
-  float: right;
-
-  margin: 0;
-  padding: 0;
-
-  font-weight: 100;
+nav ul li{
+  margin-left: 1em;
 }
 
-nav ul li{
-  display: inline;
-  margin-left: 1em;
-} */
+nav ul li a{
+  padding: 0 !important;
+
+  text-align: right;
+  font-size: 1.3em;
+  font-weight: 100;
+  color: #ECE1E6 !important;
+}
 
 /* HOME *************************/
 #title{
   position: absolute;
   bottom: 0;
-
 }
 
 #title h2{
