--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,19 @@
-/* GENERAL *************************/
+/* GERAL *************************/
+hr{
+  height: 0.2em;
+  background-color: #498f73;
+  border: none;
+}
+
 .colorPrimary{
   color: #F3F3F3 !important;
 }
 
 .colorSecondary{
-  color: #498f73 !important;
+  color: #498F73 !important;
 }
 
-/* navegation ***************/
+/* NAVEGAÇÃO ***************/
 #contentHome #navagation .navbar-toggler-icon{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(236, 225, 230, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
@@ -36,8 +42,8 @@ nav a:link,
 nav a:visited,
 nav a:hover,
 nav a:active{
-  cursor: pointer;
   text-decoration: none;
+  cursor: pointer;
 }
 
 nav ul li{
@@ -46,25 +52,20 @@ nav ul li{
 
 nav ul li a{
   padding: 0 !important;
-
   text-align: right;
   font-size: 1.3em;
   font-weight: 100;
 }
 
-/* navegation ***************/
-section hr{
-  background-color: #498f73;
-}
 
-/* HOME *************************/
+/* PÁGINA HOME *************************/
 #contentHome{
   position: absolute;
-  overflow: hidden;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   border: 1em solid #F3F3F3;
   font-family: 'Roboto', sans-serif;
   color: #F3F3F3;
@@ -87,25 +88,17 @@ section hr{
   font-weight: 300;
 }
 
-/* CURRICULUM *************************/
+
+/* PÁGINA CURRICULUM *************************/
 #contentCurriculum{
   border: 1em solid #498F73;
-
   font-family: 'Roboto', sans-serif;
-
   background-color: #F3F3F3;
 }
 
-/* card ***************/
-.areaCard{
-  margin-bottom: 2em;
-}
-
+/* CARD ***************/
 #card{
   padding: 2em;
-
-  text-align: center;
-
   border: 1px solid #B3B3B3;
   border-bottom: none;
   background-color: #E6E6E6;
@@ -113,17 +106,13 @@ section hr{
 
 #card .avatar{
   display: block;
-
   margin-bottom: 2em;
-
-  text-align: center;
 }
 
 #card .avatar img{
-    width: 12em;
-    height: auto;
-
-    border-radius: 50%;
+  width: 12em;
+  height: auto;
+  border-radius: 50%;
 }
 
 #card h2{
@@ -133,10 +122,7 @@ section hr{
 
 #card h3{
   padding-bottom: 0.7em;
-
   font-size: 1.5em;
-  font-weight: 100;
-  color:;
 }
 
 #card ul li{
@@ -145,20 +131,17 @@ section hr{
 }
 
 #card a,
-#card a:hover,
-#card a:visited,
 #card a:link,
+#card a:visited,
+#card a:hover,
 #card a:active{
+  text-decoration: none;
   color: #212529;
   cursor: pointer;
-  text-decoration: none;
 }
 
 #download{
   padding: 2em;
-
-  text-align: center;
-
   border: 1px solid #B3B3B3;
   border-top: none;
   background-color: #FDFDFD;
@@ -166,18 +149,16 @@ section hr{
 
 #download button{
   font-size: 1em;
-  text-transform: uppercase;
   border: none;
+  text-transform: uppercase;
   background-color: #498F73;
 }
 
-/* information ***************/
+/* CURRICULUM ***************/
 .areaCurriculum{
   margin-bottom: 1.5em;
   padding: 2em;
-
   border: 1px solid #B3B3B3;
-
   background-color: #FDFDFD;
 }
 
@@ -189,7 +170,7 @@ section hr{
 .areaCurriculum h3{
   padding: 0.5em 0em;
   font-size: 1.3em;
-  font-weight: 100;
+  font-weight: bold;
 }
 
 .areaCurriculum p{
@@ -198,24 +179,24 @@ section hr{
   line-height: 1.8em;
 }
 
-.areaCurriculum table td{
-  border-color: #498f73;
-}
-
-/* experience ***************/
-#collapseInformation{
-  margin-bottom: 1em;
-}
-
-#collapseInformation a{
+.areaCurriculum a{
   color: #212529;
   text-decoration: none;
 }
 
+.areaCurriculum table td{
+  border-width: 0.1em;
+  border-color: #498F73;
+}
+
+/* COLLAPSE ***************/
+#collapseInformation{
+  margin-bottom: 1em;
+}
+
 #collapseInformation .collapseTitle{
   padding-left: 1em;
-  margin-left: 1em;
-  border-left: 2px solid #498f73;
+  border-left: 0.2em solid #498F73;
 }
 
 #collapseInformation span{
@@ -223,57 +204,22 @@ section hr{
 }
 
 #collapseInformation span.collapseDate{
-  font-size: 1.5em
+  font-size: 1.5em;
+  font-weight: 400;
 }
 
 #collapseInformation h4{
   font-weight: bold;
 }
 
-
-/* MEDIA QUERIES *************************/
-@media screen and (max-width: 1366px) {
-  #title h2{
-    font-size: 5em;
-  }
-
-  #title h3{
-    font-size: 3.5em;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  #title h2{
-    font-size: 3.5em;
-  }
-
-  #title h3{
-    font-size: 2em;
-  }
-}
-
+/* MEDIA QUERIES */
 @media screen and (max-width: 420px) {
-  #title h2{
-    font-size: 2em;
-  }
-
-  #title h3{
-    font-size: 1.5em;
-  }
-
   #collapseInformation .collapseTitle{
     margin: 0;
   }
 }
 
-/* other ***************/
+/* OUTROS INTERESSES ***************/
 .hrOther{
   width: 30%;
-  height: 0.5em;
-  background-color: #498f73;
-}
-
-.areaCurriculum a{
-  color: #212529;
-  text-decoration: none;
 }
