Adição do SASS e layout inicial da Home

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,174 @@
-/* TEMPORÁRIO ================================================== */
+@charset "UTF-8";
+/* DEFINICÕES ============================== */
+/* Váriaveis =============== */
+/* HTML/Body =============== */
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px; }
+
+/* Link =============== */
+a,
+a:focus,
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: inherit; }
+
+/* Textos =============== */
+h1 {
+  margin: 0px;
+  font-size: inherit; }
+
+.txt-bold {
+  font-weight: bold; }
+
+.txt-up {
+  text-transform: uppercase; }
+
+.description {
+  font-size: 1em;
+  font-weight: 300; }
+
+/* Hr =============== */
+hr {
+  margin: 0px; }
+
+.hr-tipo1 {
+  width: 100%;
+  border: 1px solid; }
+.hr-tipo2 {
+  width: 150px;
+  margin: 12px 0px;
+  border: 3px solid; }
+
+/* Cores =============== */
+.color-nv1 {
+  color: #333333; }
+
+.color-nv2 {
+  color: #808080; }
+
+.color-nv3 {
+  color: #A9A9A9; }
+
+.color-nv4 {
+  color: #DCDCDC; }
+
+.color-nv5 {
+  color: #F5F5F5; }
+
+.bg-color-nv1 {
+  background-color: #333333; }
+
+.bg-color-nv2 {
+  background-color: #808080; }
+
+.bg-color-nv3 {
+  background-color: #A9A9A9; }
+
+.bg-color-nv4 {
+  background-color: #DCDCDC; }
+
+.bg-color-nv5 {
+  background-color: #F5F5F5; }
+
+/* PARTES FIXAS ============================== */
+/* Navegação =============== */
+#navagation .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(128, 128, 128, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
+
+.navbar {
+  margin: 30px 0 0 0;
+  padding: 0px; }
+  .navbar li {
+    margin-left: 18px;
+    padding: 0px;
+    font-size: 1em; }
+    .navbar li a {
+      padding: 0 !important;
+      text-align: center; }
+
+/* Rodapé =============== */
+/* PÁGINA:SEÇÕES ============================== */
+/* Home:Header =============== */
+header {
+  margin: 60px 0px 30px 0px; }
+  header span {
+    display: block; }
+  header img {
+    width: 200px;
+    height: 200px;
+    float: right;
+    border-radius: 50%; }
+  header .title {
+    font-size: 2em;
+    font-weight: bold; }
+  header .subtitle {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #808080; }
+  header .description {
+    color: #808080; }
+
+@media (max-width: 768px) {
+  header {
+    text-align: center; }
+    header img {
+      margin: 0 auto;
+      float: inherit; }
+    header hr {
+      margin: 12px auto !important; } }
+/* Home:Portfólio =============== */
+#sec-home-portfolio {
+  margin-top: 30px; }
+
+.job {
+  border-radius: 7px;
+  background-color: #F5F5F5; }
+  .job-type1 {
+    height: 550px; }
+  .job-type2 {
+    height: 450px;
+    margin: 30px 0px; }
+
+.job-btn {
+  position: absolute;
+  color: #F5F5F5;
+  font-weight: bold;
+  background-color: #808080; }
+  .job-btn-link {
+    top: 12px;
+    right: 12px;
+    width: 40px;
+    height: 40px;
+    line-height: 57px;
+    text-align: center;
+    border-radius: 50%; }
+    .job-btn-link .icon {
+      display: inline-block;
+      width: auto;
+      height: 35px; }
+  .job-btn-type {
+    bottom: 12px;
+    left: 12px;
+    width: fit-content;
+    padding: 5px 20px;
+    font-size: 0.75em;
+    border-radius: 50px; }
+
+@media (max-width: 768px) {
+  .m-adjust-mobile {
+    margin-top: 30px; } }
+/* DETALHES ============================== */
+/* Logo =============== */
+.logo-part1 {
+  font-size: 1.5em;
+  font-weight: 300; }
+.logo-part2 {
+  font-size: 1.5em;
+  font-weight: bold; }
+
+/*# sourceMappingURL=style.css.map */
