--- a/styles/style.sass
+++ b/styles/style.sass
@@ -25,30 +25,42 @@ body
   font-family: 'Roboto', sans-serif
   font-size: $font-size-base
 
-// Link ===============
-a,
-a:focus,
-a:link,
-a:visited,
-a:hover,
-a:active
-  color: inherit
-  text-decoration: inherit
+// Seções ===============
+section
+  margin: $spacing-3 0
+
+.sec-featured
+  padding: $spacing-3 0
 
 // Textos ===============
-h1
+h1, h2, h3, h4
   margin: 0px
-  font-size: inherit
 
-.txt-bold
+h2, h3, h4
   font-weight: bold
-
-.txt-up
   text-transform: uppercase
 
-.description
+h1
+  font-size: inherit
+
+h2
+  font-size: $font-size5
+
+h3
+  font-size: $font-size4
+
+h4
+  font-size: $font-size3
+
+.txt-featured
+  display: block
   font-size: $font-size3
   font-weight: 300
+
+// Links ===============
+a, a:focus, a:link, a:visited, a:hover, a:active
+  color: inherit
+  text-decoration: inherit
 
 // Hr ===============
 hr
@@ -56,11 +68,17 @@ hr
 
 .hr
   &-type1
+    width: 100px
+    margin: $spacing-1 auto $spacing-2 auto
+    border: 3px solid
+  &-type2
     width: 100%
     border: 1px solid
-  &-type2
-    width: 100px
-    border: 3px solid
+    margin: $spacing-3 auto
+  &-type3
+    width: 100%
+    border: 1px solid
+    margin: $spacing-2 auto
 
 // Cores ===============
 .color-nv1
@@ -93,77 +111,53 @@ hr
 .bg-color-nv5
   background-color: $color-nv5
 
+// Imagens ===============
+.img-profile
+    width: 200px
+    height: auto
+    border-radius: 50%
+
+// Media Query ===============
+@media (max-width: (768px)-1)
+  .hidden-mobile
+    display: none
 
 // PARTES FIXAS ==============================
 // Navegação ===============
+.bg-navagation
+  #navagation
+    .navbar-toggler-icon
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(220, 220, 220, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
 #navagation
   .navbar-toggler-icon
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(128, 128, 128, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
 
 .navbar
-  margin: $spacing-3 0 0 0
-  padding: 0px
+  padding: $spacing-3 15px 0px 15px
   li
     margin-left: $spacing-2
     padding: 0px
     font-size: $font-size3
+    &:last-of-type
+      font-weight: bold
     a
       padding: 0 !important
       text-align: center
+      text-transform: uppercase
+
+.bg-navagation
+  height: 250px
 
 // Rodapé ===============
 footer
   text-align: center
   margin: $spacing-3 0
-  .hr-type1
-    margin: 0 auto $spacing-3 auto
-  .hr-type2
-    margin: $spacing-1 auto $spacing-2 auto
   .email
-    font-size: $font-size2
-  .social
-    margin-top: $spacing-2
-    img
-      width: $spacing-3
-      margin: 0 $spacing-1
+    font-size: $font-size3
 
 
-// PÁGINA:SEÇÕES ==============================
-// Home:Header ===============
-header
-  margin: $spacing-4 0px $spacing-3 0px
-  span
-    display: block
-  img
-    width: 200px
-    height: 200px
-    float: right
-    border-radius: 50%
-  hr
-    margin: $spacing-1 0px
-  .title
-    font-size: $font-size5
-    font-weight: bold
-  .subtitle
-    font-size: $font-size4
-    font-weight: bold
-    color: $color-nv2
-  .description
-    color: $color-nv2
-
-@media (max-width: 768px)
-  header
-    text-align: center
-    img
-      margin: 0 auto
-      float: inherit
-    hr
-      margin: $spacing-1 auto !important
-
-// Home:Portfólio ===============
-#sec-home-portfolio
-  margin-top: $spacing-3
-
+// PARTES RECORRENTES ==============================
+// Portfólio ===============
 .job
   border-radius: 7px
   background-color: $color-nv5
@@ -200,11 +194,122 @@ header
     border-radius: 50px
 
 @media (max-width: (768px)-1)
-  #sec-home-portfolio
-    .m-adjust-mobile
-      margin-top: 30px
-    .hidden-mobile
-      display: none
+  .m-adjust-mobile
+    margin-top: 30px
+
+// Social ===============
+.social
+    margin-top: $spacing-2
+    a
+      display: inline-block  
+    img
+      height: 40px 
+      margin: 0 10px
+
+// Postagem ===============
+.post-author
+  display: block
+  font-weight: bold
+.post-date
+  display: block
+  font-weight: 300
+.post-resume
+  margin: $spacing-2
+  font-weight: 300
+
+// PÁGINA:SEÇÕES ==============================
+// Home:Header ===============
+header
+  margin: $spacing-4 0px $spacing-3 0px
+  h3
+    text-transform: capitalize
+  img
+    width: 200px
+    height: 200px
+    float: right
+    border-radius: 50%
+  .hr-type1
+    margin: $spacing-1 auto $spacing-1 0px
+
+@media (max-width: 768px)
+  header
+    text-align: center
+    img
+      margin: 0 auto
+      float: inherit
+    hr
+      margin: $spacing-1 auto !important
+
+// Sobre:Biografia ===============
+#sec-biography
+  img
+    margin-bottom: $spacing-4
+    
+  hr
+    margin: $spacing-1 auto $spacing-2 auto
+  p
+    font-size: $font-size3
+    color: $color-nv2
+  .title
+    font-size: $font-size4
+    font-weight: bold
+    display: block
+
+@media (max-width: 768px)
+  .job-type1
+    max-height: 350px
+
+// Sobre:Matemática ===============
+#sec-math
+  margin: 0px auto
+  font-weight: 300
+  img
+    margin-top: $spacing-3
+
+// Sobre:Arte ===============
+#sec-art
+  .gallery
+    img
+      margin-top: $spacing-3
+
+// Currículo:Currículo ===============
+// Cartão
+#card
+  padding: $spacing-3
+  .img-profile
+    margin-bottom: $spacing-3
+
+#card .avatar img
+  border-radius: 50%
+
+
+#card h2
+  font-size: 2.2em
+  font-weight: 900
+
+
+#card h3
+  padding-bottom: 0.7em
+  font-size: 1.5em
+
+
+#card ul li
+  padding: 0 0.3em
+  font-size: 2em
+
+#download
+  padding: 1.6em
+  border: 1px solid #B3B3B3
+  border-top: none
+  background-color: #FDFDFD
+
+
+#download button
+  font-size: 1em
+  border: none
+  text-transform: uppercase
+  background-color: #498F73
+
 
 // DETALHES ==============================
 // Logo =============== 
