--- a/styles/style.sass
+++ b/styles/style.sass
@@ -43,6 +43,8 @@ section
     font-size: $font-size4
     font-weight: bold
     display: block
+  .post-date
+    margin-bottom: $spacing-4
 
 .sec-featured
   padding: $spacing-3 0
@@ -136,7 +138,7 @@ hr
 // Media Query ===============
 @media (max-width: (768px)-1)
   .hidden-mobile
-    display: none
+    display: none !important
 
 
 // PARTES FIXAS ==============================
@@ -353,8 +355,17 @@ header
     font-weight: bold
     text-transform: uppercase
 
-// Portfólio:Resumo ===============
+// Portfólio:Galeria ===============
+#sec-gallery
+  img
+    margin-top: $spacing-3
 
+// Portfólio:Detalhe ===============
+#sec-detail
+  h4
+    margin-bottom: $spacing-3
+  ul
+    padding-left: 20px
 
 // DETALHES ==============================
 // Logo =============== 
