--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@ section {
   font-size: 1.5em;
   font-weight: bold;
   display: block; }
+.sec-base .post-date {
+  margin-bottom: 60px; }
 
 .sec-featured {
   padding: 30px 0;
@@ -105,7 +107,7 @@ hr {
 
 @media (max-width: 767px) {
   .hidden-mobile {
-    display: none; } }
+    display: none !important; } }
 .bg-navagation #navagation .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(220, 220, 220, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
 
@@ -291,6 +293,14 @@ header {
   display: block;
   font-weight: bold;
   text-transform: uppercase; }
+
+#sec-gallery img {
+  margin-top: 30px; }
+
+#sec-detail h4 {
+  margin-bottom: 30px; }
+#sec-detail ul {
+  padding-left: 20px; }
 
 .logo-part1 {
   font-size: 1.5em;
