--- a/styles/style.sass
+++ b/styles/style.sass
@@ -186,6 +186,8 @@ footer
   &-type2
     height: 450px
     margin: $spacing-3 0px
+  &-type3
+    height: 550px
 
 .job-btn
   position: absolute
@@ -195,27 +197,31 @@ footer
   &-link
     top: $spacing-1
     right: $spacing-1
-    width: 40px
-    height: 40px
-    line-height: 57px
+    width: 30px
+    height: 30px
+    line-height: 38px
     text-align: center
     border-radius: 50%
     .icon
       display: inline-block
       width: auto
-      height: 35px
-      margin-right: -2px
+      height: 25px
+      margin-right: -1px
   &-category
     bottom: $spacing-1
     left: $spacing-1
     width: fit-content
     padding: 5px 20px
-    font-size: $font-size2
+    font-size: $font-size1
     border-radius: 50px
 
 @media (max-width: (768px)-1)
   .m-adjust-mobile
     margin-top: 30px
+
+@media (max-width: (1024px)-1)
+  .job-type3
+    height: 350px
 
 // Social ===============
 .social
