--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,8 +68,9 @@ h1, h2 {
       justify-content: center;
       align-items: center;
       line-height: 1;
-      font-size: 16px;
       border-radius: 50%;
+      font-size: 16px;
+      text-decoration: none;
       background: rgba(255, 255, 255, 0.1);
       color: #FFFFFF; }
       #main .social-links a:hover {
