--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -97,8 +97,9 @@ h1, h2 {
       justify-content: center;
       align-items: center;
       line-height: 1;
-      font-size: 16px;
       border-radius: 50%;
+      font-size: 16px;
+      text-decoration: none;
       background: rgba(255, 255, 255, 0.1);
       color: $color-white;
 
@@ -107,8 +108,7 @@ h1, h2 {
       }
     }
   }
-
-} 
+}
 
 // MEDIA QUERY ===============
 @media (max-width: 992px) {
