--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,92 +1,299 @@
-body {
+html, body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px; }
+
+section {
+  margin: 30px 0; }
+
+a, a:link, a:visited, a:hover, a:active, a:focus {
+  color: inherit;
+  text-decoration: inherit; }
+
+.img-profile {
+  width: 200px;
+  height: auto;
+  border-radius: 50%; }
+
+h1 {
+  margin: 0px;
+  font-size: inherit; }
+
+h2 {
+  margin: 0px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+h3 {
+  margin: 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.5em; }
+
+.txt-featured {
+  display: block;
+  font-size: 1em;
+  font-weight: 300; }
+
+.logo-part1 {
+  font-size: 1.5em;
+  font-weight: 300;
+  color: #6C757D; }
+.logo-part2 {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #212529; }
+
+hr {
+  margin: 0px; }
+
+.hr-type1 {
+  width: 100px;
+  margin: 12px auto 18px auto;
+  border: 3px solid;
+  color: #5f5f5f; }
+.hr-type2 {
+  width: 100%;
+  border: 1px solid;
+  margin: 30px auto;
+  color: #5f5f5f; }
+.hr-type3 {
+  width: 100%;
+  border: 1px solid;
+  margin: 18px auto; }
+
+#navagation .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(128, 128, 128, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
+
+.navbar {
+  padding: 30px 15px 0px 15px; }
+  .navbar li {
+    margin-left: 18px;
+    padding: 0px;
+    font-size: 1em; }
+    .navbar li:last-of-type {
+      font-weight: bold; }
+    .navbar li a {
+      padding: 0 !important;
+      text-align: center;
+      text-transform: uppercase; }
+
+.bg-navagation {
+  background-color: #212529; }
+  .bg-navagation #navagation .logo-part1 {
+    color: #6C757D; }
+  .bg-navagation #navagation .logo-part2 {
+    color: #F8F9FA; }
+  .bg-navagation #navagation .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(220, 220, 220, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
+  .bg-navagation .navbar li {
+    color: #F8F9FA; }
+
+.bg-navagation {
+  height: 250px; }
+
+.job {
   position: relative;
-  font-family: "Open Sans", sans-serif;
-  color: #FFFFFF;
-  background: transparent;
-  background-color: #040404; }
-  body::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 100vh;
-    z-index: -1;
-    background: #040404 url("../img/bg.jpg") top right no-repeat;
-    background-size: cover; }
+  height: 450px;
+  margin: 30px 0px;
+  border: 3px solid #6C757D;
+  border-radius: 7px;
+  background-color: #F8F9FA; }
 
-@media (min-width: 1024px) {
-  body::before {
-    background-attachment: fixed; } }
-a {
-  color: #18D26E; }
-  a:hover {
-    text-decoration: none;
-    color: #18D26E; }
-
-h1, h2 {
-  font-family: "Raleway", sans-serif; }
-
-#main {
-  display: flex;
-  position: relative;
-  height: 100vh;
-  align-items: center;
-  z-index: 997;
-  overflow-y: auto;
-  transition: ease-in-out 0.3s; }
-  #main * {
-    transition: ease-in-out 0.3s; }
-  #main h1 {
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-    font-size: 48px;
-    font-weight: 700;
-    font-family: "Poppins", sans-serif; }
-    #main h1 a,
-    #main h1 a:hover {
+.job-btn {
+  position: absolute;
+  display: inline;
+  color: #F8F9FA;
+  font-weight: bold;
+  background-color: #6C757D; }
+  .job-btn-link {
+    top: 12px;
+    right: 12px;
+    width: 40px;
+    height: 40px;
+    line-height: 57px;
+    text-align: center;
+    border-radius: 50%; }
+    .job-btn-link .icon {
       display: inline-block;
-      line-height: 1;
-      color: #FFFFFF; }
-  #main h2 {
-    margin-top: 20px;
-    font-size: 24px;
-    color: rgba(255, 255, 255, 0.8); }
-    #main h2 span {
-      padding-bottom: 6px;
-      border-bottom: 2px solid #18D26E;
-      color: #FFFFFF; }
-  #main .social-links {
-    display: flex;
-    margin-top: 40px; }
-    #main .social-links a {
-      display: flex;
-      width: 40px;
-      height: 40px;
-      margin-right: 8px;
-      justify-content: center;
-      align-items: center;
-      line-height: 1;
-      border-radius: 50%;
-      font-size: 16px;
-      text-decoration: none;
-      background: rgba(255, 255, 255, 0.1);
-      color: #FFFFFF; }
-      #main .social-links a:hover {
-        background: #18D26E; }
+      width: auto;
+      height: 35px;
+      margin-right: -3px; }
+  .job-btn-category {
+    bottom: 12px;
+    left: 12px;
+    width: fit-content;
+    padding: 5px 20px;
+    font-size: 0.858em;
+    border-radius: 50px; }
 
-@media (max-width: 992px) {
-  #main h1 {
-    font-size: 36px; }
-  #main h2 {
-    line-height: 30px;
-    font-size: 20px; }
-  #main .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  #main .social-links {
-    margin-top: 15px; } }
+@media (max-width: 767px) {
+  .m-adjust-mobile {
+    margin-top: 30px; } }
+footer {
+  text-align: center;
+  margin: 30px 0; }
+  footer .logo-part1 {
+    color: #6C757D; }
+  footer .logo-part2 {
+    color: #212529; }
+  footer .email {
+    font-size: 1em;
+    color: #6C757D; }
+
+.social {
+  margin-top: 18px; }
+  .social a {
+    display: inline-block; }
+  .social img {
+    height: 40px;
+    margin: 0 10px; }
+
+header {
+  margin: 60px 0px 30px 0px; }
+  header h2 {
+    font-size: 2.21em;
+    color: #212529; }
+  header h3 {
+    text-transform: inherit;
+    color: #6C757D; }
+  header p {
+    color: #6C757D; }
+  header img {
+    width: 175px !important;
+    height: 175px;
+    float: right; }
+  header .hr-type1 {
+    margin: 12px auto 12px 0px; }
+
+@media (max-width: 768px) {
+  header {
+    text-align: center; }
+    header img {
+      margin: 0 auto;
+      float: inherit; }
+    header hr {
+      margin: 12px auto !important; } }
+#about h2 {
+  font-size: 1.5em;
+  color: #212529; }
+
+#sec-biography img {
+  margin-bottom: 60px; }
+#sec-biography h3 {
+  margin-bottom: 12px; }
+#sec-biography hr {
+  margin: 12px auto 18px auto; }
+#sec-biography p {
+  font-size: 1em;
+  color: #6C757D; }
+#sec-biography .title {
+  font-size: 1.5em;
+  font-weight: bold;
+  display: block; }
+#sec-biography .post-date {
+  margin-bottom: 60px; }
+
+#sec-math {
+  padding: 30px 0;
+  font-weight: 300;
+  background-color: #6C757D; }
+  #sec-math section {
+    margin: 0px auto;
+    font-weight: 300; }
+    #sec-math section h2,
+    #sec-math section p {
+      color: #F8F9FA; }
+    #sec-math section img {
+      margin-top: 30px; }
+    #sec-math section .hr-type1 {
+      color: #6C757D; }
+
+#sec-art .gallery img {
+  margin-top: 30px; }
+
+#resume h2 {
+  font-size: 1.5em;
+  color: #212529; }
+#resume h3 {
+  margin: 12px auto 30px auto;
+  font-size: 1em;
+  color: #212529; }
+
+#sec-resume {
+  margin-top: 60px; }
+  #sec-resume section {
+    color: #212529;
+    background-color: #F8F9FA; }
+
+#card {
+  padding: 30px;
+  border-radius: 7px 7px 0px 0px;
+  background-color: #F8F9FA; }
+  #card-download {
+    margin-bottom: 30px;
+    padding: 1.6em;
+    border-radius: 0px 0px 7px 7px;
+    background-color: #6C757D; }
+    #card-download-btn {
+      width: fit-content;
+      display: grid;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 50px;
+      font-size: 1em;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: #6C757D;
+      background-color: #F8F9FA; }
+      #card-download-btn img {
+        width: 35px;
+        vertical-align: sub; }
+  #card .img-profile {
+    margin-bottom: 30px; }
+
+.information {
+  margin: 0px 0px 30px 0px;
+  padding: 30px;
+  border-radius: 7px; }
+  .information-title {
+    margin-bottom: 30px;
+    font-weight: bold; }
+  .information p {
+    font-size: 0.9em;
+    font-weight: 300; }
+  .information ul {
+    padding: 0px;
+    margin-top: 18px;
+    margin-bottom: 0px;
+    font-size: 0.9em;
+    font-weight: 300;
+    list-style-type: none; }
+    .information ul strong {
+      font-weight: bold; }
+  .information table {
+    font-size: 0.9em; }
+  .information .glyphicon,
+  .information .fa-check-circle {
+    color: #6C757D; }
+  .information .hr-type1 {
+    margin-left: 0px; }
+
+.collapse-date {
+  font-size: 1em;
+  font-weight: 300; }
+.collapse-area {
+  margin-bottom: 12px;
+  padding-left: 1em;
+  border-left: 0.2em solid #6C757D; }
+.collapse-title {
+  display: block;
+  font-weight: bold;
+  text-transform: uppercase; }
+.collapse-subtitle {
+  color: #6C757D; }
+
+@media (max-width: 767px) {
+  .hidden-mobile {
+    display: none !important; } }
 
 /*# sourceMappingURL=main.css.map */
