--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,135 +1,434 @@
-// VARIÁVEIS ==============================
-$color-primary: #18D26E;
-$color-bg: #040404;
-$color-white: #FFFFFF;
+// VÁRIAVEIS ===============
+$c-black: #212529;
+$c-white: #F8F9FA;
+
+$c-nv1: #A9A9A9;
+$c-nv2: #6C757D;
+$c-nv3: #5f5f5f;
+
+$font-size-base: 18px;
+$font-size1: 0.66em;
+$font-size2: 0.90em;
+$font-size3: 1em;
+$font-size4: 1.5em;
+$font-size5: 1.7em;
+
+$spacing-base: 30px;
+$spacing-1: $spacing-base*0.4;
+$spacing-2: $spacing-base*0.6;
+$spacing-3: $spacing-base;
+$spacing-4: $spacing-base*2;
 
 
-// GERAL ==============================
-body {
-  position: relative;
-  font-family: "Open Sans", sans-serif;
-  color: $color-white;
-  background: transparent;
-  background-color: $color-bg;
-  &::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 100vh;
-    z-index: -1;
-    background: $color-bg url("../img/bg.jpg") top right no-repeat;
-    background-size: cover;
+// GERAL ===============
+html, body{
+  font-family: 'Roboto', sans-serif;
+  font-size: $font-size-base;
+}
+
+section{ margin: $spacing-3 0; }
+
+a,a:link,a:visited,a:hover,a:active, a:focus{
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.img-profile{
+  width: 200px;
+  height: auto;
+  border-radius: 50%;
+}
+
+
+// TEXTO ===============
+h1{
+  margin: 0px;
+  font-size: inherit;
+}
+
+h2{
+  margin: 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+h3{
+  margin: 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: $font-size4; 
+}
+
+.txt-featured{
+  display: block;
+  font-size: $font-size3;
+  font-weight: 300;
+}
+
+.logo{
+  &-part1{
+    font-size: $font-size4;
+    font-weight: 300;
+    color: $c-nv2;
+  }
+  &-part2{
+    font-size: $font-size4;
+    font-weight: bold;
+    color: $c-black;
   }
 }
 
-// MEDIA QUERY ===============
-@media (min-width: 1024px) {
-  body::before {
-    background-attachment: fixed;
-  }
-}
 
-a {
-  color: $color-primary;
-  &:hover {
-    text-decoration: none;
-    color: $color-primary;
-  }
-}
-
-h1, h2 {
-  font-family: "Raleway", sans-serif;
-}
-
-// MAIN ==============================
-#main {
-  display: flex;
-  position: relative;
-  height: 100vh;
-  align-items: center;
-  z-index: 997;
-  overflow-y: auto;
-  transition: ease-in-out 0.3s;
+// HR ===============
+hr{ margin: 0px; }
   
-  * {
-    transition: ease-in-out 0.3s;
+.hr{
+  &-type1{
+    width: 100px;
+    margin: $spacing-1 auto $spacing-2 auto;
+    border: 3px solid;
+    color: $c-nv3;
+  }
+  &-type2{
+    width: 100%;
+    border: 1px solid;
+    margin: $spacing-3 auto;
+    color: $c-nv3;
+  }
+  &-type3{
+    width: 100%;
+    border: 1px solid;
+    margin: $spacing-2 auto;
+  }
+}
+
+
+// GERAL:NAVEGAÇÃO ===============
+#navagation{
+  .navbar-toggler-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(128, 128, 128, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
+}
+
+.navbar{
+  padding: $spacing-3 15px 0px 15px;
+
+  li{
+    margin-left: $spacing-2;
+    padding: 0px;
+    font-size: $font-size3;
+
+    &:last-of-type{
+      font-weight: bold;
+    }
+    a{
+      padding: 0 !important;
+      text-align: center;
+      text-transform: uppercase;
+    }
+  }
+}
+
+.bg-navagation{
+  background-color: $c-black;
+
+  #navagation{
+    .logo-part1{ color: $c-nv2; }
+    .logo-part2{ color: $c-white; }
+
+    .navbar-toggler-icon{
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(220, 220, 220, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
   }
 
-  h1 {
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-    font-size: 48px;
-    font-weight: 700;
-    font-family: "Poppins", sans-serif;
+  .navbar{  
+    li{ color: $c-white; }
+  }
+}
 
-    a,
-    a:hover {
+.bg-navagation{ height: 250px; }
+
+
+// GERAL:PORTFÓLIO ===============
+.job{
+  position: relative;
+  height: 450px;
+  margin: $spacing-3 0px;
+  border: 3px solid #6C757D;
+  border-radius: 7px;
+  background-color: $c-white;
+}
+
+.job-btn{
+  position: absolute;
+  display: inline;
+  color: $c-white;
+  font-weight: bold;
+  background-color: $c-nv2;
+
+  &-link{
+    top: $spacing-1;
+    right: $spacing-1;
+    width: 40px;
+    height: 40px;
+    line-height: 57px;    
+    text-align: center;
+    border-radius: 50%;
+
+    .icon{
       display: inline-block;
-      line-height: 1;
-      color: $color-white;
+      width: auto;
+      height: 35px;
+      margin-right: -3px;
     }
   }
-
-  h2 {
-    margin-top: 20px;
-    font-size: 24px;
-    color: rgba(255, 255, 255, 0.8);
-
-    span {
-      padding-bottom: 6px;
-      border-bottom: 2px solid $color-primary;
-      color: $color-white;
-    }
+  &-category{
+    bottom: $spacing-1;
+    left: $spacing-1;
+    width: fit-content;
+    padding: 5px 20px;
+    font-size: $font-size1 * 1.3;
+    border-radius: 50px;
   }
+}
+
+@media (max-width: (768px)-1){
+  .m-adjust-mobile{ margin-top: 30px; }
+}
+
+
+// GERAL:RODAPÉ ===============
+footer{
+  text-align: center;
+  margin: $spacing-3 0;
+
+  .logo-part1{ color: $c-nv2; }
+  .logo-part2{ color: $c-black; }
   
-  .social-links {
-    display: flex;
-    margin-top: 40px;
+  .email{
+    font-size: $font-size3;
+    color: $c-nv2;
+  }
+}
 
-    a {
-      display: flex;
-      width: 40px;
-      height: 40px;
-      margin-right: 8px;
-      justify-content: center;
-      align-items: center;
-      line-height: 1;
-      border-radius: 50%;
-      font-size: 16px;
-      text-decoration: none;
-      background: rgba(255, 255, 255, 0.1);
-      color: $color-white;
 
-      &:hover {
-        background: $color-primary;
+// GERAL:SOCIAL ===============
+.social{
+  margin-top: $spacing-2;
+
+  a{ display: inline-block; }  
+  img{
+    height: 40px;
+    margin: 0 10px;
+  }
+}
+
+
+// HOME:CABEÇALHO ===============
+header{
+  margin: $spacing-4 0px $spacing-3 0px;
+ 
+  h2{
+    font-size: $font-size5 * 1.3;
+    color: $c-black;
+  }
+  h3{ 
+    text-transform: inherit;
+    color: $c-nv2;
+  }
+  p{ color: $c-nv2;  }
+  img{
+    width: 175px !important;
+    height: 175px;
+    float: right;
+  }
+
+  .hr-type1{ margin: $spacing-1 auto $spacing-1 0px; }
+}
+
+@media (max-width: 768px){
+  header{
+    text-align: center;
+    
+    img{
+      margin: 0 auto;
+      float: inherit;
+    }
+    hr{ margin: $spacing-1 auto !important; }
+  }
+}
+
+
+// SOBRE ===============
+#about{
+  h2{
+    font-size: $font-size4;
+    color: $c-black;
+  }
+}
+
+
+// SOBRE:BIOGRAFIA ===============
+#sec-biography{
+  img{ margin-bottom: $spacing-4; }
+  h3{ margin-bottom: $spacing-1; }
+  hr{ margin: $spacing-1 auto $spacing-2 auto; }
+  p{
+    font-size: $font-size3;
+    color: $c-nv2;
+  }
+
+  .title{
+    font-size: $font-size4;
+    font-weight: bold;
+    display: block;
+  }
+  .post-date{ margin-bottom: $spacing-4; }
+}
+
+
+// SOBRE:MATEMÁTICA ===============
+#sec-math{
+  padding: $spacing-3 0;
+  font-weight: 300;
+  background-color: $c-nv2;
+
+  section{
+    margin: 0px auto;
+    font-weight: 300;
+
+    h2,
+    p{ color: $c-white; }
+    img{ margin-top: $spacing-3; }
+
+    .hr-type1{ color: $c-nv2; }
+  }
+}
+
+
+// SOBRE:ARTE ===============
+#sec-art{
+  .gallery{
+    img{ margin-top: $spacing-3; }
+  }
+}
+
+
+// CURRÍCULO ===============
+#resume{
+  h2{
+    font-size: $font-size4;
+    color: $c-black;
+  }
+  h3{ 
+    margin: $spacing-1 auto $spacing-3 auto;
+    font-size: $font-size3;
+    color: $c-black;
+  }
+}
+
+
+// CURRÍCULO:GERAL ===============
+#sec-resume{ 
+  margin-top: $spacing-4;
+
+  section{
+    color: $c-black;
+    background-color: $c-white;
+  }
+}
+
+
+// CURRÍCULO:CARTÃO ===============
+#card{
+  padding: $spacing-3;
+  border-radius: 7px 7px 0px 0px;
+  background-color: $c-white;
+  
+  &-download{
+    margin-bottom: $spacing-3;
+    padding: 1.6em;
+    border-radius: 0px 0px 7px 7px;
+    background-color: $c-nv2;
+    
+    &-btn{
+      width: fit-content;
+      display: grid;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 50px;
+      font-size: $font-size3;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: $c-nv2;
+      background-color: $c-white;
+      
+      img{
+        width: 35px;
+        vertical-align: sub;
       }
     }
   }
+
+  .img-profile{ margin-bottom: $spacing-3; }
 }
 
+
+// CURRÍCULO:INFORMAÇÕES ===============
+.information{
+  margin: 0px 0px $spacing-3 0px;
+  padding: $spacing-3;
+  border-radius: 7px;
+  
+  &-title{
+    margin-bottom: $spacing-3;
+    font-weight: bold;
+  }
+  p{
+    font-size: $font-size2;
+    font-weight: 300;
+  }
+  ul{
+    padding: 0px;
+    margin-top: $spacing-2;
+    margin-bottom: 0px;
+    font-size: $font-size2;
+    font-weight: 300;
+    list-style-type: none;
+    
+    strong{ font-weight: bold; }
+  }
+  table{ font-size: $font-size2; }
+
+  .glyphicon,
+  .fa-check-circle{ color: $c-nv2; }
+  
+  .hr-type1{ margin-left: 0px; }
+}
+
+// CURRÍCULO:INFORMAÇÕES (CAIXA) =====
+.collapse{
+  &-date{
+    font-size: $font-size3;
+    font-weight: 300;
+  }
+  &-area{
+    margin-bottom: $spacing-1;
+    padding-left: 1em;
+    border-left: 0.2em solid $c-nv2;
+  }
+  &-title{
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  &-subtitle{ color: $c-nv2; }
+}
+
+
 // MEDIA QUERY ===============
-@media (max-width: 992px) {
-  #main{
-    h1 {
-      font-size: 36px;
-    }
-
-    h2 {
-      line-height: 30px;
-      font-size: 20px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .social-links {
-      margin-top: 15px;
-    }
+@media (max-width: (768px)-1){
+  .hidden-mobile{
+    display: none !important;
   }
 }
